[package]
edition = "2021"
name = "grpc_s2c"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
log = "0.4"
once_cell = "1.20"
parking_lot = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["gzip", "transport"] }
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.12"
